<resources>
    <string name="app_name">Bike Waze</string>
    <string name="openDrawer">opendrawer</string>
    <string name="closeDrawer">closedrawer</string>
    <string name="title_activity_maps">Map</string>

<!--    Main Menu-->
    <string name="tv_mainmenu">Main Menu</string>
    <string name="btn_reports">Reports</string>
    <string name="btn_setting">Setting</string>
    <string name="btn_exit">Exit</string>

<!--    Reports Detail-->
    <string name="btn_back">Back</string>
    <string name="tv_location">Location</string>
    <string name="tv_description">Description</string>
    <string name="not_available">Not available</string>
    <string name="colon">:</string>

</resources>

<!--template-->
<!--<string name=""></string>-->